<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/nameTextView"
            style="@style/shoe_attribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name_text" />

        <TextView
            android:id="@+id/companyTextView"
            style="@style/shoe_attribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_text" />

        <TextView
            android:id="@+id/sizeTextView"
            style="@style/shoe_attribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size_text" />

        <TextView
            android:id="@+id/descriptionTextView"
            style="@style/shoe_attribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_text" />

    </LinearLayout>

</layout>

